# rabbit-tutorial-rust

./: Cargo.toml  docker-compose.yml
src/: main.rs
