[package]
name = "tutorial"
version = "0.1.0"
authors = ["Marco Dallagiacoma <marco.dallagiacoma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
futures-lite = "1.12.0"
lapin = "1.7.1"
tokio = { version = "1.8.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }

